--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,27 +7,23 @@ theme: erudite
 	<meta charset="UTF-8" />
     <title>{{ page.title }} &#8211; Kuudes mauste</title>
 	<meta name="profile" content="http://gmpg.org/xfn/11" />
-	<!--[if lte IE 7 ]> <link rel="stylesheet" href="http://www.kuudesmauste.fi/wp-content/themes/the-erudite/css/ie7.css" type="text/css"> <![endif]-->
-	<!--[if IE 8 ]> <link rel="stylesheet" href="http://www.kuudesmauste.fi/wp-content/themes/the-erudite/css/ie8.css" type="text/css"> <![endif]-->
+	<!--[if lte IE 7 ]> <link rel="stylesheet" href="/themes/the-erudite/css/ie7.css" type="text/css"> <![endif]-->
+	<!--[if IE 8 ]> <link rel="stylesheet" href="/themes/the-erudite/css/ie8.css" type="text/css"> <![endif]-->
 	<script>
 		var erdt = {"More":"<span>\u2193<\/span> Jatka lukemista","Less":"<span>\u2191<\/span> Piilota","Info":"&#x2193; Lis\u00e4tietoja","MenuShow":"<span>\u2193<\/span> Valikko","MenuHide":"<span>\u2191<\/span> Piilota","DisableKeepReading":false,"DisableHide":false};
 		(function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement);
 	</script>
-	<link rel="pingback" href="http://www.kuudesmauste.fi/xmlrpc.php" />
 <meta name='robots' content='noindex,nofollow' />
-<link rel="alternate" type="application/rss+xml" title="Kuudes mauste &raquo; Feed" href="http://www.kuudesmauste.fi/feed/" />
-<link rel="alternate" type="application/rss+xml" title="Kuudes mauste &raquo; Comments Feed" href="http://www.kuudesmauste.fi/comments/feed/" />
-<link rel="alternate" type="application/rss+xml" title="Kuudes mauste &raquo; {{ page.title }} Comments Feed" href="http://www.kuudesmauste.fi/2010/09/25/aurakanaa-salaattipedilla/feed/" />
-<link rel='stylesheet' id='the-erudite-css'  href='http://www.kuudesmauste.fi/wp-content/themes/the-erudite/css/erudite.css?ver=3.4' type='text/css' media='all' />
-<script type='text/javascript' src='http://www.kuudesmauste.fi/wp-includes/js/comment-reply.js?ver=3.4'></script>
-<script type='text/javascript' src='http://www.kuudesmauste.fi/wp-includes/js/jquery/jquery.js?ver=1.7.2'></script>
-<link rel="EditURI" type="application/rsd+xml" title="RSD" href="http://www.kuudesmauste.fi/xmlrpc.php?rsd" />
-<link rel="wlwmanifest" type="application/wlwmanifest+xml" href="http://www.kuudesmauste.fi/wp-includes/wlwmanifest.xml" /> 
-<link rel='prev' title='Viimeisimmät punaviinit, osa I' href='http://www.kuudesmauste.fi/2010/09/25/viimeisimmat-punaviinit-osa-i/' />
-<link rel='next' title='Purjo-perunasosekeitto' href='http://www.kuudesmauste.fi/2010/10/27/purjo-perunasosekeitto/' />
+<link rel="alternate" type="application/rss+xml" title="Kuudes mauste &raquo; Feed" href="/feed/" />
+<link rel="alternate" type="application/rss+xml" title="Kuudes mauste &raquo; Comments Feed" href="/comments/feed/" />
+<link rel="alternate" type="application/rss+xml" title="Kuudes mauste &raquo; {{ page.title }} Comments Feed" href="/2010/09/25/aurakanaa-salaattipedilla/feed/" />
+<link rel='stylesheet' id='the-erudite-css'  href='/themes/the-erudite/css/erudite.css' type='text/css' media='all' />
+<script type='text/javascript' src='/js/comment-reply.js'></script>
+<script type='text/javascript' src='/js/jquery/jquery.js?ver=1.7.2'></script>
+<link rel='prev' title='Viimeisimmät punaviinit, osa I' href='/2010/09/25/viimeisimmat-punaviinit-osa-i/' />
+<link rel='next' title='Purjo-perunasosekeitto' href='/2010/10/27/purjo-perunasosekeitto/' />
 <meta name="generator" content="WordPress 3.4" />
 <link rel='canonical' href='http://www.kuudesmauste.fi/2010/09/25/aurakanaa-salaattipedilla/' />
-<link rel='shortlink' href='http://www.kuudesmauste.fi/?p=109' />
 </head>
 <body class="single single-post postid-109 single-format-standard hiding">
 
@@ -35,13 +31,13 @@ theme: erudite
 	
 	<div id="header-wrap">
 		<div id="header" role="banner">
-			<h1 id="blog-title"><span><a href="http://www.kuudesmauste.fi/" title="Kuudes mauste" rel="home">Kuudes mauste</a></span></h1>
+			<h1 id="blog-title"><span><a href="/" title="Kuudes mauste" rel="home">Kuudes mauste</a></span></h1>
 			<div id="blog-description">I see hungry people</div>
 		</div><!--  #header -->
 
 		<div id="access" role="navigation">
 			<div class="skip-link"><a href="#content" title="Oikaise sisältöön">Oikaise sisältöön</a></div>
-			<div id="menu"><ul><li class="page_item page-item-131"><a href="http://www.kuudesmauste.fi/kuudesmauste/">Blogista</a></li><li class="page_item page-item-21"><a href="http://www.kuudesmauste.fi/ferrix/">Ferrix</a></li><li class="page_item page-item-35"><a href="http://www.kuudesmauste.fi/mikael/">Mikael</a></li></ul></div>
+			<div id="menu"><ul><li class="page_item page-item-131"><a href="/kuudesmauste/">Blogista</a></li><li class="page_item page-item-21"><a href="/ferrix/">Ferrix</a></li><li class="page_item page-item-35"><a href="/mikael/">Mikael</a></li></ul></div>
 		</div><!-- #access -->
 
 	</div><!--  #header-wrap -->
@@ -56,24 +52,24 @@ theme: erudite
 				<div class="entry-meta">
                     <span class="entry-date"><abbr class="published" title="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date: "%d.%m.%Y" }}</abbr></span>
 					<span class="meta-sep">|</span>
-                    <span class="author vcard">Kirjoittanut <a href="http://www.kuudesmauste.fi/author/ferrix/" title="Kirjoittajan {{ page.author }} julkaisut">{{ page.author }}</a></span>
+                    <span class="author vcard">Kirjoittanut <a href="/author/{{ page.author | downcase }}/" title="Kirjoittajan {{ page.author }} julkaisut">{{ page.author }}</a></span>
 					<span class="meta-sep">|</span>
-					<span class="cat-links">Julkaistu <a href="http://www.kuudesmauste.fi/luokka/ruuanlaitto/reseptit/" title="View all posts in Reseptit" rel="category tag">Reseptit</a></span>
+					<span class="cat-links">Julkaistu <a href="/luokka/ruuanlaitto/reseptit/" title="View all posts in Reseptit" rel="category tag">Reseptit</a></span>
 					<span class="meta-sep">|</span>
-										<span class="comments-link"><a href="http://www.kuudesmauste.fi/2010/09/25/aurakanaa-salaattipedilla/#respond" title="Comment on Aurakanaa salaattipedillä">Ei kommentteja</a></span>
+										<span class="comments-link"><a href="#respond" title="Comment on Aurakanaa salaattipedillä">Ei kommentteja</a></span>
 				</div>
 			</div><!-- .post -->
 
 			<div id="nav-below" class="navigation">
-				<div class="nav-previous"><a href="http://www.kuudesmauste.fi/2010/09/25/viimeisimmat-punaviinit-osa-i/" rel="prev"><span class="meta-nav">&larr;</span> Viimeisimmät punaviinit, osa I</a></div>
-				<div class="nav-next"><a href="http://www.kuudesmauste.fi/2010/10/27/purjo-perunasosekeitto/" rel="next">Purjo-perunasosekeitto <span class="meta-nav">&rarr;</span></a></div>
+				<div class="nav-previous"><a href="/2010/09/25/viimeisimmat-punaviinit-osa-i/" rel="prev"><span class="meta-nav">&larr;</span> Viimeisimmät punaviinit, osa I</a></div>
+				<div class="nav-next"><a href="/2010/10/27/purjo-perunasosekeitto/" rel="next">Purjo-perunasosekeitto <span class="meta-nav">&rarr;</span></a></div>
 			</div>
 
 			<div id="comments">
 	<h4>Ei kommentteja</h4>
 								<div id="respond">
 				<h3 id="reply-title">Leave a Reply <small><a rel="nofollow" id="cancel-comment-reply-link" href="/2010/09/25/aurakanaa-salaattipedilla/#respond" style="display:none;">Cancel reply</a></small></h3>
-									<form action="http://www.kuudesmauste.fi/wp-comments-post.php" method="post" id="commentform">
+									<form action="/wp-comments-post.php" method="post" id="commentform">
 																			<p id="comment-notes">Sähköpostiosoitettasi <em>ei koskaan</em> jaeta ulkopuolisille.Pakolliset kentät on merkitty <span class="required">*</span></p>							<div class="user-info"><div class="form-label"><label for="author">Nimi</label> <span class="required">*</span></div><div class="form-input"><input id="author" name="author" class="text" type="text" value="" size="30" /></div>
 <div class="form-label"><label for="email">Sähköposti</label> <span class="required">*</span></div><div class="form-input"><input id="email" name="email" class="text" type="text" value="" size="30" /></div>
 <div class="form-label"><label for="url">Sivusto</label></div><div class="form-input"><input id="url" name="url" class="text" type="text" value="" size="30" /></div>
@@ -106,9 +102,9 @@ theme: erudite
 					<li id="pages">
 						<h3>Sivut</h3>
 						<ul>
-		<li class="page_item page-item-131"><a href="http://www.kuudesmauste.fi/kuudesmauste/">Blogista</a></li>
-<li class="page_item page-item-21"><a href="http://www.kuudesmauste.fi/ferrix/">Ferrix</a></li>
-<li class="page_item page-item-35"><a href="http://www.kuudesmauste.fi/mikael/">Mikael</a></li>
+		<li class="page_item page-item-131"><a href="/kuudesmauste/">Blogista</a></li>
+<li class="page_item page-item-21"><a href="/ferrix/">Ferrix</a></li>
+<li class="page_item page-item-35"><a href="/mikael/">Mikael</a></li>
 						</ul>
 					</li>
 								
@@ -121,17 +117,17 @@ theme: erudite
 				<li id="categories">
 					<h3>Luokat</h3>
 					<ul>
-		<li class="cat-item cat-item-56"><a href="http://www.kuudesmauste.fi/luokka/blogi/" title="View all posts filed under Kuudes mauste">Kuudes mauste</a>
+		<li class="cat-item cat-item-56"><a href="/luokka/blogi/" title="View all posts filed under Kuudes mauste">Kuudes mauste</a>
 </li>
-	<li class="cat-item cat-item-4"><a href="http://www.kuudesmauste.fi/luokka/ruuanlaitto/" title="Miten me kokkaamme">Ruuanlaitto</a>
+	<li class="cat-item cat-item-4"><a href="/luokka/ruuanlaitto/" title="Miten me kokkaamme">Ruuanlaitto</a>
 <ul class='children'>
-	<li class="cat-item cat-item-7"><a href="http://www.kuudesmauste.fi/luokka/ruuanlaitto/reseptit/" title="View all posts filed under Reseptit">Reseptit</a>
+	<li class="cat-item cat-item-7"><a href="/luokka/ruuanlaitto/reseptit/" title="View all posts filed under Reseptit">Reseptit</a>
 </li>
-	<li class="cat-item cat-item-5"><a href="http://www.kuudesmauste.fi/luokka/ruuanlaitto/valineet/" title="Ruoanlaiton välineet ja niihin liittyvät asiat">Välineet</a>
+	<li class="cat-item cat-item-5"><a href="/luokka/ruuanlaitto/valineet/" title="Ruoanlaiton välineet ja niihin liittyvät asiat">Välineet</a>
 </li>
 </ul>
 </li>
-	<li class="cat-item cat-item-6"><a href="http://www.kuudesmauste.fi/luokka/viinit/" title="View all posts filed under Viinit">Viinit</a>
+	<li class="cat-item cat-item-6"><a href="/luokka/viinit/" title="View all posts filed under Viinit">Viinit</a>
 </li>
  
 
@@ -141,11 +137,11 @@ theme: erudite
 				<li id="archives">
 					<h3>Arkisto</h3>
 					<ul>
-		<li><a href='http://www.kuudesmauste.fi/2011/02/' title='February 2011'>February 2011</a></li>
-	<li><a href='http://www.kuudesmauste.fi/2011/01/' title='January 2011'>January 2011</a></li>
-	<li><a href='http://www.kuudesmauste.fi/2010/11/' title='November 2010'>November 2010</a></li>
-	<li><a href='http://www.kuudesmauste.fi/2010/10/' title='October 2010'>October 2010</a></li>
-	<li><a href='http://www.kuudesmauste.fi/2010/09/' title='September 2010'>September 2010</a></li>
+		<li><a href='/2011/02/' title='Helmikuu 2011'>Helmikuu 2011</a></li>
+	<li><a href='/2011/01/' title='Tammikuu 2011'>Tammikuu 2011</a></li>
+	<li><a href='/2010/11/' title='Marraskuu 2010'>Marraskuu 2010</a></li>
+	<li><a href='/2010/10/' title='Lokakuu 2010'>Lokakuu 2010</a></li>
+	<li><a href='/2010/09/' title='Syyskuu 2010'>Syyskuu 2010</a></li>
 
 					</ul>
 				</li>
@@ -182,19 +178,11 @@ theme: erudite
 				<li id="rss-links">
 					<h3>RSS-syötteet</h3>
 					<ul>
-						<li><a href="http://www.kuudesmauste.fi/feed/" title="Kuudes mauste viimeisintä julkaisua" rel="alternate" type="application/rss+xml">Kaikki julkaisut</a></li>
-						<li><a href="http://www.kuudesmauste.fi/comments/feed/" title="Kuudes mauste viimeisintä kommenttia" rel="alternate" type="application/rss+xml">Kaikki kommentit</a></li>
+						<li><a href="/feed/" title="Kuudes mauste viimeisintä julkaisua" rel="alternate" type="application/rss+xml">Kaikki julkaisut</a></li>
+						<li><a href="/comments/feed/" title="Kuudes mauste viimeisintä kommenttia" rel="alternate" type="application/rss+xml">Kaikki kommentit</a></li>
 					</ul>
 				</li>
 
-				<li id="meta">
-					<h3>Meta</h3>
-					<ul>
-						
-						<li><a href="http://www.kuudesmauste.fi/wp-login.php">Log in</a></li>
-						
-					</ul>
-				</li>
 				</ul>
 		</div><!-- #ternary .sidebar -->
 			<div id="footer">
@@ -206,7 +194,7 @@ theme: erudite
 	</div><!-- #footer-wrap -->
 
 </div><!-- #wrapper .hfeed -->
-<script type='text/javascript' src='http://www.kuudesmauste.fi/wp-content/themes/the-erudite/js/common.js?ver=3.0.2'></script>
+<script type='text/javascript' src='/themes/the-erudite/js/common.js'></script>
 </body>
 </html>
 
