Remove absolute links from page template

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,16 +12,15 @@
 	</script>
 <meta name='robots' content='noindex,nofollow' />
 <link rel="alternate" type="application/rss+xml" title="Kuudes mauste &raquo; Feed" href="/feed/" />
-<link rel="alternate" type="application/rss+xml" title="Kuudes mauste &raquo; Comments Feed" href="http://www.kuudesmauste.fi/comments/feed/" />
-<link rel="alternate" type="application/rss+xml" title="Kuudes mauste &raquo; Blogista Comments Feed" href="http://www.kuudesmauste.fi/kuudesmauste/feed/" />
-<link rel='stylesheet' id='the-erudite-css'  href='http://www.kuudesmauste.fi/wp-content/themes/the-erudite/css/erudite.css?ver=3.4' type='text/css' media='all' />
-<script type='text/javascript' src='http://www.kuudesmauste.fi/wp-includes/js/comment-reply.js?ver=3.4'></script>
-<script type='text/javascript' src='http://www.kuudesmauste.fi/wp-includes/js/jquery/jquery.js?ver=1.7.2'></script>
-<link rel="EditURI" type="application/rsd+xml" title="RSD" href="http://www.kuudesmauste.fi/xmlrpc.php?rsd" />
-<link rel="wlwmanifest" type="application/wlwmanifest+xml" href="http://www.kuudesmauste.fi/wp-includes/wlwmanifest.xml" /> 
-<link rel='next' title='Ferrix' href='http://www.kuudesmauste.fi/ferrix/' />
+<link rel="alternate" type="application/rss+xml" title="Kuudes mauste &raquo; Comments Feed" href="/comments/feed/" />
+<link rel="alternate" type="application/rss+xml" title="Kuudes mauste &raquo; Blogista Comments Feed" href="/kuudesmauste/feed/" />
+<link rel='stylesheet' id='the-erudite-css'  href='/themes/the-erudite/css/erudite.css' type='text/css' media='all' />
+<script type='text/javascript' src='/js/comment-reply.js?ver=3.4'></script>
+<script type='text/javascript' src='/js/jquery/jquery.js?ver=1.7.2'></script>
+<link rel="EditURI" type="application/rsd+xml" title="RSD" href="/xmlrpc.php?rsd" />
+<link rel='next' title='Ferrix' href='/ferrix/' />
 <meta name="generator" content="WordPress 3.4" />
-<link rel='canonical' href='http://www.kuudesmauste.fi/kuudesmauste/' />
+<link rel='canonical' href='/kuudesmauste/' />
 </head>
 <body class="page page-id-131 page-template-default hiding">
 
@@ -29,13 +28,13 @@
 	
 	<div id="header-wrap">
 		<div id="header" role="banner">
-			<h1 id="blog-title"><span><a href="http://www.kuudesmauste.fi/" title="Kuudes mauste" rel="home">Kuudes mauste</a></span></h1>
+			<h1 id="blog-title"><span><a href="/" title="Kuudes mauste" rel="home">Kuudes mauste</a></span></h1>
 			<div id="blog-description">I see hungry people</div>
 		</div><!--  #header -->
 
 		<div id="access" role="navigation">
 			<div class="skip-link"><a href="#content" title="Oikaise sisältöön">Oikaise sisältöön</a></div>
-			<div id="menu"><ul><li class="page_item page-item-131 current_page_item"><a href="http://www.kuudesmauste.fi/kuudesmauste/">Blogista</a></li><li class="page_item page-item-21"><a href="http://www.kuudesmauste.fi/ferrix/">Ferrix</a></li><li class="page_item page-item-35"><a href="http://www.kuudesmauste.fi/mikael/">Mikael</a></li></ul></div>
+			<div id="menu"><ul><li class="page_item page-item-131 current_page_item"><a href="/kuudesmauste/">Blogista</a></li><li class="page_item page-item-21"><a href="/ferrix/">Ferrix</a></li><li class="page_item page-item-35"><a href="/mikael/">Mikael</a></li></ul></div>
 		</div><!-- #access -->
 
 	</div><!--  #header-wrap -->
@@ -70,9 +69,9 @@
 					<li id="pages">
 						<h3>Sivut</h3>
 						<ul>
-		<li class="page_item page-item-131 current_page_item"><a href="http://www.kuudesmauste.fi/kuudesmauste/">Blogista</a></li>
-<li class="page_item page-item-21"><a href="http://www.kuudesmauste.fi/ferrix/">Ferrix</a></li>
-<li class="page_item page-item-35"><a href="http://www.kuudesmauste.fi/mikael/">Mikael</a></li>
+		<li class="page_item page-item-131 current_page_item"><a href="/kuudesmauste/">Blogista</a></li>
+<li class="page_item page-item-21"><a href="/ferrix/">Ferrix</a></li>
+<li class="page_item page-item-35"><a href="/mikael/">Mikael</a></li>
 						</ul>
 					</li>
 								
@@ -85,17 +84,17 @@
 				<li id="categories">
 					<h3>Luokat</h3>
 					<ul>
-		<li class="cat-item cat-item-56"><a href="http://www.kuudesmauste.fi/luokka/blogi/" title="View all posts filed under Kuudes mauste">Kuudes mauste</a>
+		<li class="cat-item cat-item-56"><a href="/luokka/blogi/" title="View all posts filed under Kuudes mauste">Kuudes mauste</a>
 </li>
-	<li class="cat-item cat-item-4"><a href="http://www.kuudesmauste.fi/luokka/ruuanlaitto/" title="Miten me kokkaamme">Ruuanlaitto</a>
+	<li class="cat-item cat-item-4"><a href="/luokka/ruuanlaitto/" title="Miten me kokkaamme">Ruuanlaitto</a>
 <ul class='children'>
-	<li class="cat-item cat-item-7"><a href="http://www.kuudesmauste.fi/luokka/ruuanlaitto/reseptit/" title="View all posts filed under Reseptit">Reseptit</a>
+	<li class="cat-item cat-item-7"><a href="/luokka/ruuanlaitto/reseptit/" title="View all posts filed under Reseptit">Reseptit</a>
 </li>
-	<li class="cat-item cat-item-5"><a href="http://www.kuudesmauste.fi/luokka/ruuanlaitto/valineet/" title="Ruoanlaiton välineet ja niihin liittyvät asiat">Välineet</a>
+	<li class="cat-item cat-item-5"><a href="/luokka/ruuanlaitto/valineet/" title="Ruoanlaiton välineet ja niihin liittyvät asiat">Välineet</a>
 </li>
 </ul>
 </li>
-	<li class="cat-item cat-item-6"><a href="http://www.kuudesmauste.fi/luokka/viinit/" title="View all posts filed under Viinit">Viinit</a>
+	<li class="cat-item cat-item-6"><a href="/luokka/viinit/" title="View all posts filed under Viinit">Viinit</a>
 </li>
  
 
@@ -105,11 +104,11 @@
 				<li id="archives">
 					<h3>Arkisto</h3>
 					<ul>
-		<li><a href='http://www.kuudesmauste.fi/2011/02/' title='February 2011'>February 2011</a></li>
-	<li><a href='http://www.kuudesmauste.fi/2011/01/' title='January 2011'>January 2011</a></li>
-	<li><a href='http://www.kuudesmauste.fi/2010/11/' title='November 2010'>November 2010</a></li>
-	<li><a href='http://www.kuudesmauste.fi/2010/10/' title='October 2010'>October 2010</a></li>
-	<li><a href='http://www.kuudesmauste.fi/2010/09/' title='September 2010'>September 2010</a></li>
+		<li><a href='/2011/02/' title='Helmikuu 2011'>Helmikuu 2011</a></li>
+	<li><a href='/2011/01/' title='Tammikuu 2011'>Tammikuu 2011</a></li>
+	<li><a href='/2010/11/' title='Marraskuu 2010'>Marraskuu 2010</a></li>
+	<li><a href='/2010/10/' title='Lokakuu 2010'>Lokakuu 2010</a></li>
+	<li><a href='/2010/09/' title='Syyskuu 2010'>Syyskuu 2010</a></li>
 
 					</ul>
 				</li>
@@ -146,23 +145,14 @@
 				<li id="rss-links">
 					<h3>RSS-syötteet</h3>
 					<ul>
-						<li><a href="http://www.kuudesmauste.fi/feed/" title="Kuudes mauste viimeisintä julkaisua" rel="alternate" type="application/rss+xml">Kaikki julkaisut</a></li>
-						<li><a href="http://www.kuudesmauste.fi/comments/feed/" title="Kuudes mauste viimeisintä kommenttia" rel="alternate" type="application/rss+xml">Kaikki kommentit</a></li>
-					</ul>
-				</li>
-
-				<li id="meta">
-					<h3>Meta</h3>
-					<ul>
-						
-						<li><a href="http://www.kuudesmauste.fi/wp-login.php">Log in</a></li>
-						
+						<li><a href="/feed/" title="Kuudes mauste viimeisintä julkaisua" rel="alternate" type="application/rss+xml">Kaikki julkaisut</a></li>
+						<li><a href="/comments/feed/" title="Kuudes mauste viimeisintä kommenttia" rel="alternate" type="application/rss+xml">Kaikki kommentit</a></li>
 					</ul>
 				</li>
 				</ul>
 		</div><!-- #ternary .sidebar -->
 			<div id="footer">
-				<span id="generator-link"><a href="http://wordpress.org/" title="WordPress" rel="generator">WordPress</a></span>
+				<span id="generator-link"><a href="http://github.com/mojombo/jekyll/" title="Jekyll" rel="generator">Jekyll</a></span>
 				<span class="meta-sep">|</span>
 				<span id="theme-link"><a href="http://somadesign.ca/" title="The Erudite -teema WordPressille" rel="designer nofollow">The Erudite</a></span>
 			</div><!-- #footer -->
@@ -170,6 +160,6 @@
 	</div><!-- #footer-wrap -->
 
 </div><!-- #wrapper .hfeed -->
-<script type='text/javascript' src='http://www.kuudesmauste.fi/wp-content/themes/the-erudite/js/common.js?ver=3.0.2'></script>
+<script type='text/javascript' src='/themes/the-erudite/js/common.js'></script>
 </body>
 </html>
