Remove unneeded classes
Make the pages more mergable by removing useless classes.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,3 +1,6 @@
+---
+theme: erudite
+---
 <!DOCTYPE html>
 <html dir="ltr" lang="fi-FI" class="no-js">
 <head>
@@ -13,16 +16,16 @@
 <meta name='robots' content='noindex,nofollow' />
 <link rel="alternate" type="application/rss+xml" title="Kuudes mauste &raquo; Feed" href="/feed/" />
 <link rel="alternate" type="application/rss+xml" title="Kuudes mauste &raquo; Comments Feed" href="/comments/feed/" />
-<link rel="alternate" type="application/rss+xml" title="Kuudes mauste &raquo; Blogista Comments Feed" href="/kuudesmauste/feed/" />
+<link rel="alternate" type="application/rss+xml" title="Kuudes mauste &raquo; {{ page.title }} Comments Feed" href="/kuudesmauste/feed/" />
 <link rel='stylesheet' id='the-erudite-css'  href='/themes/the-erudite/css/erudite.css' type='text/css' media='all' />
-<script type='text/javascript' src='/js/comment-reply.js?ver=3.4'></script>
+<script type='text/javascript' src='/js/comment-reply.js'></script>
 <script type='text/javascript' src='/js/jquery/jquery.js?ver=1.7.2'></script>
 <link rel="EditURI" type="application/rsd+xml" title="RSD" href="/xmlrpc.php?rsd" />
 <link rel='next' title='Ferrix' href='/ferrix/' />
 <meta name="generator" content="WordPress 3.4" />
 <link rel='canonical' href='/kuudesmauste/' />
 </head>
-<body class="page page-id-131 page-template-default hiding">
+<body class="page page-template-default hiding">
 
 <div id="wrapper" class="hfeed">
 	
@@ -34,7 +37,7 @@
 
 		<div id="access" role="navigation">
 			<div class="skip-link"><a href="#content" title="Oikaise sisältöön">Oikaise sisältöön</a></div>
-			<div id="menu"><ul><li class="page_item page-item-131 current_page_item"><a href="/kuudesmauste/">Blogista</a></li><li class="page_item page-item-21"><a href="/ferrix/">Ferrix</a></li><li class="page_item page-item-35"><a href="/mikael/">Mikael</a></li></ul></div>
+			<div id="menu"><ul><li class="page_item"><a href="/kuudesmauste/">Blogista</a></li><li class="page_item"><a href="/ferrix/">Ferrix</a></li><li class="page_item"><a href="/mikael/">Mikael</a></li></ul></div>
 		</div><!-- #access -->
 
 	</div><!--  #header-wrap -->
@@ -42,7 +45,7 @@
 		<div id="content" role="main">
 
 
-			<div id="post-131" class="post-131 page type-page status-publish hentry">
+			<div class="page type-page status-publish hentry">
 				<h2 class="entry-title">{{ page.title }}</h2>
 				<div class="entry-content">
 				{{ content}}
@@ -69,9 +72,9 @@
 					<li id="pages">
 						<h3>Sivut</h3>
 						<ul>
-		<li class="page_item page-item-131 current_page_item"><a href="/kuudesmauste/">Blogista</a></li>
-<li class="page_item page-item-21"><a href="/ferrix/">Ferrix</a></li>
-<li class="page_item page-item-35"><a href="/mikael/">Mikael</a></li>
+		<li class="page_item"><a href="/kuudesmauste/">Blogista</a></li>
+<li class="page_item"><a href="/ferrix/">Ferrix</a></li>
+<li class="page_item"><a href="/mikael/">Mikael</a></li>
 						</ul>
 					</li>
 								
@@ -84,17 +87,17 @@
 				<li id="categories">
 					<h3>Luokat</h3>
 					<ul>
-		<li class="cat-item cat-item-56"><a href="/luokka/blogi/" title="View all posts filed under Kuudes mauste">Kuudes mauste</a>
+		<li class="cat-item"><a href="/luokka/blogi/" title="View all posts filed under Kuudes mauste">Kuudes mauste</a>
 </li>
-	<li class="cat-item cat-item-4"><a href="/luokka/ruuanlaitto/" title="Miten me kokkaamme">Ruuanlaitto</a>
+	<li class="cat-item"><a href="/luokka/ruuanlaitto/" title="Miten me kokkaamme">Ruuanlaitto</a>
 <ul class='children'>
-	<li class="cat-item cat-item-7"><a href="/luokka/ruuanlaitto/reseptit/" title="View all posts filed under Reseptit">Reseptit</a>
+	<li class="cat-item"><a href="/luokka/ruuanlaitto/reseptit/" title="View all posts filed under Reseptit">Reseptit</a>
 </li>
-	<li class="cat-item cat-item-5"><a href="/luokka/ruuanlaitto/valineet/" title="Ruoanlaiton välineet ja niihin liittyvät asiat">Välineet</a>
+	<li class="cat-item"><a href="/luokka/ruuanlaitto/valineet/" title="Ruoanlaiton välineet ja niihin liittyvät asiat">Välineet</a>
 </li>
 </ul>
 </li>
-	<li class="cat-item cat-item-6"><a href="/luokka/viinit/" title="View all posts filed under Viinit">Viinit</a>
+	<li class="cat-item"><a href="/luokka/viinit/" title="View all posts filed under Viinit">Viinit</a>
 </li>
  
 
