--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ theme: erudite
 <html dir="ltr" lang="fi-FI" class="no-js">
 <head>
 	<meta charset="UTF-8" />
-    <title>{{ page.title }} &#8211; Kuudes mauste</title>
+	<title>{{ page.title }} &#8211; Kuudes mauste</title>
 	<meta name="profile" content="http://gmpg.org/xfn/11" />
 	<!--[if lte IE 7 ]> <link rel="stylesheet" href="/themes/the-erudite/css/ie7.css" type="text/css"> <![endif]-->
 	<!--[if IE 8 ]> <link rel="stylesheet" href="/themes/the-erudite/css/ie8.css" type="text/css"> <![endif]-->
@@ -23,9 +23,9 @@ theme: erudite
 <link rel='prev' title='Viimeisimmät punaviinit, osa I' href='/2010/09/25/viimeisimmat-punaviinit-osa-i/' />
 <link rel='next' title='Purjo-perunasosekeitto' href='/2010/10/27/purjo-perunasosekeitto/' />
 <meta name="generator" content="WordPress 3.4" />
-<link rel='canonical' href='http://www.kuudesmauste.fi/2010/09/25/aurakanaa-salaattipedilla/' />
+<link rel='canonical' href='/2010/09/25/aurakanaa-salaattipedilla/' />
 </head>
-<body class="single single-post postid-109 single-format-standard hiding">
+<body class="single single-post single-format-standard hiding">
 
 <div id="wrapper" class="hfeed">
 	
@@ -37,14 +37,14 @@ theme: erudite
 
 		<div id="access" role="navigation">
 			<div class="skip-link"><a href="#content" title="Oikaise sisältöön">Oikaise sisältöön</a></div>
-			<div id="menu"><ul><li class="page_item page-item-131"><a href="/kuudesmauste/">Blogista</a></li><li class="page_item page-item-21"><a href="/ferrix/">Ferrix</a></li><li class="page_item page-item-35"><a href="/mikael/">Mikael</a></li></ul></div>
+			<div id="menu"><ul><li class="page_item"><a href="/kuudesmauste/">Blogista</a></li><li class="page_item"><a href="/ferrix/">Ferrix</a></li><li class="page_item"><a href="/mikael/">Mikael</a></li></ul></div>
 		</div><!-- #access -->
 
 	</div><!--  #header-wrap -->
 	<div id="container">
 		<div id="content" role="main">
 
-						<div id="post-109" class="post-109 post type-post status-publish format-standard hentry category-reseptit">
+						<div class="post type-post status-publish format-standard hentry category-reseptit">
                 <h2 class="entry-title">{{ page.title }}</h2>
 				<div class="entry-content">
                 {{ content }}
@@ -102,9 +102,9 @@ theme: erudite
 					<li id="pages">
 						<h3>Sivut</h3>
 						<ul>
-		<li class="page_item page-item-131"><a href="/kuudesmauste/">Blogista</a></li>
-<li class="page_item page-item-21"><a href="/ferrix/">Ferrix</a></li>
-<li class="page_item page-item-35"><a href="/mikael/">Mikael</a></li>
+		<li class="page_item"><a href="/kuudesmauste/">Blogista</a></li>
+<li class="page_item"><a href="/ferrix/">Ferrix</a></li>
+<li class="page_item"><a href="/mikael/">Mikael</a></li>
 						</ul>
 					</li>
 								
@@ -117,17 +117,17 @@ theme: erudite
 				<li id="categories">
 					<h3>Luokat</h3>
 					<ul>
-		<li class="cat-item cat-item-56"><a href="/luokka/blogi/" title="View all posts filed under Kuudes mauste">Kuudes mauste</a>
+		<li class="cat-item"><a href="/luokka/blogi/" title="View all posts filed under Kuudes mauste">Kuudes mauste</a>
 </li>
-	<li class="cat-item cat-item-4"><a href="/luokka/ruuanlaitto/" title="Miten me kokkaamme">Ruuanlaitto</a>
+	<li class="cat-item"><a href="/luokka/ruuanlaitto/" title="Miten me kokkaamme">Ruuanlaitto</a>
 <ul class='children'>
-	<li class="cat-item cat-item-7"><a href="/luokka/ruuanlaitto/reseptit/" title="View all posts filed under Reseptit">Reseptit</a>
+	<li class="cat-item"><a href="/luokka/ruuanlaitto/reseptit/" title="View all posts filed under Reseptit">Reseptit</a>
 </li>
-	<li class="cat-item cat-item-5"><a href="/luokka/ruuanlaitto/valineet/" title="Ruoanlaiton välineet ja niihin liittyvät asiat">Välineet</a>
+	<li class="cat-item"><a href="/luokka/ruuanlaitto/valineet/" title="Ruoanlaiton välineet ja niihin liittyvät asiat">Välineet</a>
 </li>
 </ul>
 </li>
-	<li class="cat-item cat-item-6"><a href="/luokka/viinit/" title="View all posts filed under Viinit">Viinit</a>
+	<li class="cat-item"><a href="/luokka/viinit/" title="View all posts filed under Viinit">Viinit</a>
 </li>
  
 
@@ -186,7 +186,7 @@ theme: erudite
 				</ul>
 		</div><!-- #ternary .sidebar -->
 			<div id="footer">
-				<span id="generator-link"><a href="http://wordpress.org/" title="WordPress" rel="generator">WordPress</a></span>
+				<span id="generator-link"><a href="http://github.com/mojombo/jekyll/" title="Jekyll" rel="generator">Jekyll</a></span>
 				<span class="meta-sep">|</span>
 				<span id="theme-link"><a href="http://somadesign.ca/" title="The Erudite -teema WordPressille" rel="designer nofollow">The Erudite</a></span>
 			</div><!-- #footer -->
