Fix bad Finnish in footer

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -178,8 +178,8 @@ theme: erudite
 				<li id="rss-links">
 					<h3>RSS-syötteet</h3>
 					<ul>
-						<li><a href="/feed/" title="Kuudes mauste viimeisintä julkaisua" rel="alternate" type="application/rss+xml">Kaikki julkaisut</a></li>
-						<li><a href="/comments/feed/" title="Kuudes mauste viimeisintä kommenttia" rel="alternate" type="application/rss+xml">Kaikki kommentit</a></li>
+						<li><a href="/feed/" title="Kuudes mauste viimeisimmät julkaisut" rel="alternate" type="application/rss+xml">Kaikki julkaisut</a></li>
+						<li><a href="/comments/feed/" title="Kuudes mauste viimeisimmät kommentit" rel="alternate" type="application/rss+xml">Kaikki kommentit</a></li>
 					</ul>
 				</li>
 
