Point generator reference to Jekyll

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -22,7 +22,7 @@ theme: erudite
 <script type='text/javascript' src='/js/jquery/jquery.js?ver=1.7.2'></script>
 <link rel="EditURI" type="application/rsd+xml" title="RSD" href="/xmlrpc.php?rsd" />
 <link rel='next' title='Ferrix' href='/ferrix/' />
-<meta name="generator" content="WordPress 3.4" />
+<meta name="generator" content="Jekyll" />
 <link rel='canonical' href='/kuudesmauste/' />
 </head>
 <body class="page page-template-default hiding">
