--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,7 @@ theme: erudite
 <script type='text/javascript' src='/js/jquery/jquery.js?ver=1.7.2'></script>
 <link rel='prev' title='Viimeisimmät punaviinit, osa I' href='/2010/09/25/viimeisimmat-punaviinit-osa-i/' />
 <link rel='next' title='Purjo-perunasosekeitto' href='/2010/10/27/purjo-perunasosekeitto/' />
-<meta name="generator" content="WordPress 3.4" />
+<meta name="generator" content="Jekyll" />
 <link rel='canonical' href='/2010/09/25/aurakanaa-salaattipedilla/' />
 </head>
 <body class="single single-post single-format-standard hiding">
