--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ theme: erudite
 <meta name='robots' content='noindex,nofollow' />
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }} &raquo; Feed" href="/feed/" />
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }} &raquo; Comments Feed" href="/comments/feed/" />
-<link rel="alternate" type="application/rss+xml" title="{{ site.title }} &raquo; {{ page.title }} Comments Feed" href="/2010/09/25/aurakanaa-salaattipedilla/feed/" />
+<link rel="alternate" type="application/rss+xml" title="{{ site.title }} &raquo; {{ page.title }} Comments Feed" href="feed/" />
 <link rel='stylesheet' id='the-erudite-css'  href='/themes/the-erudite/css/erudite.css' type='text/css' media='all' />
 <script type='text/javascript' src='/js/comment-reply.js'></script>
 <script type='text/javascript' src='/js/jquery/jquery.js?ver=1.7.2'></script>
