--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ theme: erudite
 <link rel='prev' title='Viimeisimmät punaviinit, osa I' href='/2010/09/25/viimeisimmat-punaviinit-osa-i/' />
 <link rel='next' title='Purjo-perunasosekeitto' href='/2010/10/27/purjo-perunasosekeitto/' />
 <meta name="generator" content="Jekyll" />
-<link rel='canonical' href='/2010/09/25/aurakanaa-salaattipedilla/' />
+<link rel='canonical' href='{{ page.url }}' />
 </head>
 <body class="single single-post single-format-standard hiding">
 
@@ -44,10 +44,10 @@ theme: erudite
 	<div id="container">
 		<div id="content" role="main">
 
-						<div class="post type-post status-publish format-standard hentry category-reseptit">
+        <div class="post type-post status-publish format-standard hentry category-reseptit">
                 <h2 class="entry-title">{{ page.title }}</h2>
 				<div class="entry-content">
-                {{ content }}
+                                {{ content }}
 				</div>
 				<div class="entry-meta">
                     <span class="entry-date"><abbr class="published" title="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date: "%d.%m.%Y" }}</abbr></span>
