--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -20,146 +20,123 @@ theme: erudite
 <link rel='stylesheet' id='the-erudite-css'  href='/themes/the-erudite/css/erudite.css' type='text/css' media='all' />
 <script type='text/javascript' src='/js/comment-reply.js'></script>
 <script type='text/javascript' src='/js/jquery/jquery.js?ver=1.7.2'></script>
-<link rel='next' title='Ferrix' href='/ferrix/' />
 <meta name="generator" content="Jekyll" />
 <link rel='canonical' href='{{ page.url }}' />
 </head>
 <body class="page page-template-default hiding">
 
 <div id="wrapper" class="hfeed">
-	
-	<div id="header-wrap">
-		<div id="header" role="banner">
+
+    <div id="header-wrap">
+        <div id="header" role="banner">
             <h1 id="blog-title"><span><a href="/" title="{{ site.title }}" rel="home">{{ site.title }}</a></span></h1>
             <div id="blog-description">{{ site.tagline }}</div>
-		</div><!--  #header -->
+        </div><!--  #header -->
 
-		<div id="access" role="navigation">
-			<div class="skip-link"><a href="#content" title="Oikaise sisältöön">Oikaise sisältöön</a></div>
-			<div id="menu"><ul><li class="page_item"><a href="/kuudesmauste/">Blogista</a></li><li class="page_item"><a href="/ferrix/">Ferrix</a></li><li class="page_item"><a href="/mikael/">Mikael</a></li></ul></div>
-		</div><!-- #access -->
+        <div id="access" role="navigation">
+            <div class="skip-link"><a href="#content" title="Oikaise sisältöön">Oikaise sisältöön</a></div>
+            <div id="menu"><ul><li class="page_item"><a href="/kuudesmauste/">Blogista</a></li><li class="page_item"><a href="/ferrix/">Ferrix</a></li><li class="page_item"><a href="/mikael/">Mikael</a></li></ul></div>
+        </div><!-- #access -->
 
-	</div><!--  #header-wrap -->
-	<div id="container">
-		<div id="content" role="main">
-
-
-        <div class="page type-page status-publish hentry">
+    </div><!--  #header-wrap -->
+    <div id="container">
+        <div id="content" role="main">
+            <div class="page type-page status-publish hentry">
                 <h2 class="entry-title">{{ page.title }}</h2>
-				<div class="entry-content">
-                                {{ content }}
-				</div>
-			</div><!-- .post -->
+                <div class="entry-content">
+                    {{ content }}
+                </div>
+            </div><!-- .post -->
+        </div><!-- #content -->
+    </div><!-- #container -->
 
-
-		</div><!-- #content -->
-	</div><!-- #container -->
-
-
-	<div id="footer-wrap">
-		<div id="footer-wrap-inner">
-			<div id="primary" class="footer">
-				<ul class="xoxo">
-		
-					<li id="about-sidebar">
-						<h3>Tietoja</h3>
-						<div>
-                        <p>{{ site.title }} on blogi ruuasta. Kirjoittajat ovat Ferrix ja Mikael. Emme ole ammattikokkeja, mutta viihdymme keittiössä ja ruokapöydässä.</p>
-						</div>
-					</li>
-					
-					<li id="pages">
-						<h3>Sivut</h3>
-						<ul>
-		<li class="page_item"><a href="/kuudesmauste/">Blogista</a></li>
-<li class="page_item"><a href="/ferrix/">Ferrix</a></li>
-<li class="page_item"><a href="/mikael/">Mikael</a></li>
-						</ul>
-					</li>
-								
-						</ul>
-			</div><!-- #primary .sidebar -->
-
-		<div id="secondary" class="footer">
-			<ul class="xoxo">
-	
-				<li id="categories">
-					<h3>Luokat</h3>
-					<ul>
-                        <li class="cat-item"><a href="/luokka/blogi/" title="View all posts filed under {{ site.title }}">{{ site.title }}</a>
-</li>
-	<li class="cat-item"><a href="/luokka/ruuanlaitto/" title="Miten me kokkaamme">Ruuanlaitto</a>
-<ul class='children'>
-	<li class="cat-item"><a href="/luokka/ruuanlaitto/reseptit/" title="View all posts filed under Reseptit">Reseptit</a>
-</li>
-	<li class="cat-item"><a href="/luokka/ruuanlaitto/valineet/" title="Ruoanlaiton välineet ja niihin liittyvät asiat">Välineet</a>
-</li>
-</ul>
-</li>
-	<li class="cat-item"><a href="/luokka/viinit/" title="View all posts filed under Viinit">Viinit</a>
-</li>
- 
-
-					</ul>
-				</li>
-
-				<li id="archives">
-					<h3>Arkisto</h3>
-					<ul>
-		<li><a href='/2011/02/' title='Helmikuu 2011'>Helmikuu 2011</a></li>
-	<li><a href='/2011/01/' title='Tammikuu 2011'>Tammikuu 2011</a></li>
-	<li><a href='/2010/11/' title='Marraskuu 2010'>Marraskuu 2010</a></li>
-	<li><a href='/2010/10/' title='Lokakuu 2010'>Lokakuu 2010</a></li>
-	<li><a href='/2010/09/' title='Syyskuu 2010'>Syyskuu 2010</a></li>
-
-					</ul>
-				</li>
-				</ul>
-		</div><!-- #secondary .sidebar -->
-
-		<div id="ternary" class="footer">
-			<ul class="xoxo">
-					<li id="search">
-					<h3><label for="s">Haku</label></h3>
-					<form id="searchform" class="blog-search" method="get" action="http://www.kuudesmauste.fi">
-						<div>
-							<input id="s" name="s" type="text" class="text" value="" size="10" tabindex="1" />
-							<input type="submit" class="button" value="Etsi" tabindex="2" />
-						</div>
-					</form>
-				</li>
-
-	<li id="linkcat-2" class="linkcat"><h3>Blogroll</h3>
-	<ul class='xoxo blogroll'>
-<li><a href="http://keittionatsi.blogspot.com/">Keittiönatsi</a></li>
-<li><a href="http://pastanjauhantaa.blogspot.com/">Pastanjauhantaa</a></li>
-
-	</ul>
-</li>
-<li id="linkcat-57" class="linkcat"><h3>Kuvat</h3>
-	<ul class='xoxo blogroll'>
-<li><a href="http://www.flickr.com/photos/ferrix/tags/kuudesmauste.fi/show/" rel="me">Ferrix</a></li>
-<li><a href="http://www.flickr.com/photos/kjue/tags/kuudesmauste.fi/show/">Mikael</a></li>
-
-	</ul>
-</li>
-
-				<li id="rss-links">
-					<h3>RSS-syötteet</h3>
-					<ul>
-                        <li><a href="/feed/" title="{{ site.title }} viimeisimmät julkaisut" rel="alternate" type="application/rss+xml">Kaikki julkaisut</a></li>
-                        <li><a href="/comments/feed/" title="{{ site.title }} viimeisimmät kommentit" rel="alternate" type="application/rss+xml">Kaikki kommentit</a></li>
-					</ul>
-				</li>
-				</ul>
-		</div><!-- #ternary .sidebar -->
-			<div id="footer">
-				<span id="generator-link"><a href="http://github.com/mojombo/jekyll/" title="Jekyll" rel="generator">Jekyll</a></span>
-				<span class="meta-sep">|</span>
-				<span id="theme-link"><a href="http://somadesign.ca/" title="The Erudite -teema WordPressille" rel="designer nofollow">The Erudite</a></span>
-			</div><!-- #footer -->
-		</div><!-- #footer-wrap-inner -->
-	</div><!-- #footer-wrap -->
+    <div id="footer-wrap">
+        <div id="footer-wrap-inner">
+            <div id="primary" class="footer">
+                <ul class="xoxo">
+                    <li id="about-sidebar">
+                        <h3>Tietoja</h3>
+                        <div>
+                            <p>{{ site.title }} on blogi ruuasta. Kirjoittajat ovat Ferrix ja Mikael. Emme ole ammattikokkeja, mutta viihdymme keittiössä ja ruokapöydässä.</p>
+                        </div>
+                    </li>
+                    <li id="pages">
+                        <h3>Sivut</h3>
+                        <ul>
+                            <li class="page_item"><a href="/kuudesmauste/">Blogista</a></li>
+                            <li class="page_item"><a href="/ferrix/">Ferrix</a></li>
+                            <li class="page_item"><a href="/mikael/">Mikael</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div><!-- #primary .sidebar -->
+            <div id="secondary" class="footer">
+                <ul class="xoxo">
+                    <li id="categories">
+                        <h3>Luokat</h3>
+                        <ul>
+                            <li class="cat-item"><a href="/luokka/blogi/" title="View all posts filed under {{ site.title }}">{{ site.title }}</a>
+    </li>
+                            <li class="cat-item"><a href="/luokka/ruuanlaitto/" title="Miten me kokkaamme">Ruuanlaitto</a>
+                                <ul class='children'>
+                                    <li class="cat-item"><a href="/luokka/ruuanlaitto/reseptit/" title="View all posts filed under Reseptit">Reseptit</a></li>
+                                    <li class="cat-item"><a href="/luokka/ruuanlaitto/valineet/" title="Ruoanlaiton välineet ja niihin liittyvät asiat">Välineet</a></li>
+                                </ul>
+                            </li>
+                            <li class="cat-item"><a href="/luokka/viinit/" title="View all posts filed under Viinit">Viinit</a></li>
+                        </ul>
+                    </li>
+                    <li id="archives">
+                        <h3>Arkisto</h3>
+                        <ul>
+                            <li><a href='/2011/02/' title='Helmikuu 2011'>Helmikuu 2011</a></li>
+                            <li><a href='/2011/01/' title='Tammikuu 2011'>Tammikuu 2011</a></li>
+                            <li><a href='/2010/11/' title='Marraskuu 2010'>Marraskuu 2010</a></li>
+                            <li><a href='/2010/10/' title='Lokakuu 2010'>Lokakuu 2010</a></li>
+                            <li><a href='/2010/09/' title='Syyskuu 2010'>Syyskuu 2010</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div><!-- #secondary .sidebar -->
+            <div id="ternary" class="footer">
+                <ul class="xoxo">
+                    <li id="search">
+                        <h3><label for="s">Haku</label></h3>
+                        <form id="searchform" class="blog-search" method="get" action="http://www.kuudesmauste.fi">
+                            <div>
+                                <input id="s" name="s" type="text" class="text" value="" size="10" tabindex="1" />
+                                <input type="submit" class="button" value="Etsi" tabindex="2" />
+                            </div>
+                        </form>
+                    </li>
+                    <li class="linkcat"><h3>Blogroll</h3>
+                        <ul class='xoxo blogroll'>
+                            <li><a href="http://keittionatsi.blogspot.com/">Keittiönatsi</a></li>
+                            <li><a href="http://pastanjauhantaa.blogspot.com/">Pastanjauhantaa</a></li>
+                        </ul>
+                    </li>
+                    <li class="linkcat"><h3>Kuvat</h3>
+                        <ul class='xoxo blogroll'>
+                            <li><a href="http://www.flickr.com/photos/ferrix/tags/kuudesmauste.fi/show/" rel="me">Ferrix</a></li>
+                            <li><a href="http://www.flickr.com/photos/kjue/tags/kuudesmauste.fi/show/">Mikael</a></li>
+                        </ul>
+                    </li>
+                    <li id="rss-links">
+                        <h3>RSS-syötteet</h3>
+                        <ul>
+                            <li><a href="/feed/" title="{{ site.title }} viimeisimmät julkaisut" rel="alternate" type="application/rss+xml">Kaikki julkaisut</a></li>
+                            <li><a href="/comments/feed/" title="{{ site.title }} viimeisimmät kommentit" rel="alternate" type="application/rss+xml">Kaikki kommentit</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div><!-- #ternary .sidebar -->
+            <div id="footer">
+                <span id="generator-link"><a href="http://github.com/mojombo/jekyll/" title="Jekyll" rel="generator">Jekyll</a></span>
+                <span class="meta-sep">|</span>
+                <span id="theme-link"><a href="http://somadesign.ca/" title="The Erudite -teema WordPressille" rel="designer nofollow">The Erudite</a></span>
+            </div><!-- #footer -->
+        </div><!-- #footer-wrap-inner -->
+    </div><!-- #footer-wrap -->
 
 </div><!-- #wrapper .hfeed -->
 <script type='text/javascript' src='/themes/the-erudite/js/common.js'></script>
