UTF-8 encode footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
                     <li id="about-sidebar">
                         <h3>Tietoja</h3>
                         <div>
-                            <p>{{ site.title }} on blogi ruuasta. Kirjoittajat ovat Ferrix ja Mikael. Emme ole ammattikokkeja, mutta viihdymme keittiössä ja ruokapöydässä.</p>
+                            <p>{{ site.title }} on blogi ruuasta. Kirjoittajat ovat Ferrix ja Mikael. Emme ole ammattikokkeja, mutta viihdymme keittiÃ¶ssÃ¤ ja ruokapÃ¶ydÃ¤ssÃ¤.</p>
                         </div>
                     </li>
                     <li id="pages">
@@ -30,7 +30,7 @@
                             <li class="cat-item"><a href="/luokka/ruuanlaitto/" title="Miten me kokkaamme">Ruuanlaitto</a>
                                 <ul class='children'>
                                     <li class="cat-item"><a href="/luokka/ruuanlaitto/reseptit/" title="View all posts filed under Reseptit">Reseptit</a></li>
-                                    <li class="cat-item"><a href="/luokka/ruuanlaitto/valineet/" title="Ruoanlaiton välineet ja niihin liittyvät asiat">Välineet</a></li>
+                                    <li class="cat-item"><a href="/luokka/ruuanlaitto/valineet/" title="Ruoanlaiton vÃ¤lineet ja niihin liittyvÃ¤t asiat">VÃ¤lineet</a></li>
                                 </ul>
                             </li>
                             <li class="cat-item"><a href="/luokka/viinit/" title="View all posts filed under Viinit">Viinit</a></li>
@@ -63,7 +63,7 @@
                     <li class="linkcat">
                         <h3>Blogroll</h3>
                         <ul class='xoxo blogroll'>
-                            <li><a href="http://keittionatsi.blogspot.com/">Keittiönatsi</a></li>
+                            <li><a href="http://keittionatsi.blogspot.com/">KeittiÃ¶natsi</a></li>
                             <li><a href="http://pastanjauhantaa.blogspot.com/">Pastanjauhantaa</a></li>
                         </ul>
                     </li>
@@ -75,10 +75,10 @@
                         </ul>
                     </li>
                     <li id="rss-links">
-                        <h3>RSS-syötteet</h3>
+                        <h3>RSS-syÃ¶tteet</h3>
                         <ul>
-                            <li><a href="/feed/" title="{{ site.title }} viimeisimmät julkaisut" rel="alternate" type="application/rss+xml">Kaikki julkaisut</a></li>
-                            <li><a href="/comments/feed/" title="{{ site.title }} viimeisimmät kommentit" rel="alternate" type="application/rss+xml">Kaikki kommentit</a></li>
+                            <li><a href="/feed/" title="{{ site.title }} viimeisimmÃ¤t julkaisut" rel="alternate" type="application/rss+xml">Kaikki julkaisut</a></li>
+                            <li><a href="/comments/feed/" title="{{ site.title }} viimeisimmÃ¤t kommentit" rel="alternate" type="application/rss+xml">Kaikki kommentit</a></li>
                         </ul>
                     </li>
                 </ul>
