--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -19,11 +19,11 @@ theme: erudite
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }} &raquo; {{ page.title }} Comments Feed" href="feed/" />
 <link rel='stylesheet' id='the-erudite-css'  href='/themes/the-erudite/css/erudite.css' type='text/css' media='all' />
 <script type='text/javascript' src='/js/comment-reply.js'></script>
-<script type='text/javascript' src='/js/jquery/jquery.js?ver=1.7.2'></script>
+<script type='text/javascript' src='/js/jquery/jquery.js'></script>
 <meta name="generator" content="Jekyll" />
 <link rel='canonical' href='{{ page.url }}' />
 </head>
-<body class="page page-template-default hiding">
+<body class="page hiding">
 
 <div id="wrapper" class="hfeed">
 
@@ -41,7 +41,7 @@ theme: erudite
     </div><!--  #header-wrap -->
     <div id="container">
         <div id="content" role="main">
-            <div class="page type-page status-publish hentry">
+            <div class="{{ page.layout }}">
                 <h2 class="entry-title">{{ page.title }}</h2>
                 <div class="entry-content">
                     {{ content }}
